--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "enum": "^3.0.4",
     "express": "^4.18.2",
-    "mongose": "^0.0.2-security",
+    "mongoose": "^5.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "connect-multiparty": "^2.1.0",
