--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   },
   "homepage": "https://github.com/avillucas/ticketeradb2api#readme",
   "dependencies": {
-    "enum": "^3.0.4",
-    "express": "^4.18.2",
-    "mongoose": "^5.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "connect-multiparty": "^2.1.0",
+    "dotenv": "^16.3.1",
+    "enum": "^3.0.4",
+    "express": "^4.18.2",
     "jwt-simple": "^0.5.1",
     "moment": "^2.20.1",
+    "mongoose": "^5.0.1",
     "mongoose-pagination": "^1.0.0"
   },
   "devDependencies": {
