--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,14 @@
         {
             "src": "./index.js",
             "use": "@vercel/node"
+        },
+        {
+            "rewrites": [
+                {
+                    "src": "/.*",
+                    "dest": "/"
+                }
+            ]
         }
-    ] 
+    ]
 }
