--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,12 @@
         {
             "src": "./index.js",
             "use": "@vercel/node"
-        },
+        }
+    ],
+    "routes": [
         {
-            "rewrites": [
-                {
-                    "src": "/.*",
-                    "dest": "/"
-                }
-            ]
+            "src": "/.*",
+            "dest": "/"
         }
     ]
 }
