--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "connect-multiparty": "^2.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "enum": "^3.0.4",
     "express": "^4.18.2",
     "jwt-simple": "^0.5.1",
     "moment": "^2.20.1",
     "mongoose": "^5.0.1",
-    "mongoose-pagination": "^1.0.0"
+    "mongoose-pagination": "^1.0.0",
+    "vercel": "^24.2.5"
   },
   "devDependencies": {
-    "nodemon": "^1.14.12"
+    "nodemon": "^3.0.2"
   }
 }
